Style sign up component and access email, password

--- a/ema-jonson-router-firebase/src/Components/Login/Login.css
+++ b/ema-jonson-router-firebase/src/Components/Login/Login.css
@@ -21,3 +21,10 @@ margin: 0 auto;
 
     display: block;
     }
+.horizontal{
+
+    background-color:black;
+    width: 50px;
+    border-right-width: 60px;
+
+}
